fix: getFirst instead of get(0)